@@ -9,8 +9,9 @@
     entertain visitors.
   </para>
   <para>
-    <application>Gnome</application> uses the
-    <application>xscreensaver</application> program to display
+    <application>Gnome</application> uses either the
+    <application>xscreensaver</application> or the <application>gnome-screensaver</application>
+    programs to display
     screensavers.  By default, <application>Gnome</application> comes
     with dozens of screensavers.  These can all be configured in the
     <application>Settings Capplet</application> in <application>Gnome
@@ -85,7 +86,7 @@
 		<term>Random Screen Saver</term>
 		<listitem>
 		  <para>
-		    <application>xscreensaver</application> can
+		    The screensaver program can
 		    display screensavers in a random fashion.
 		    This option displays screensavers randomly.
 		    It also puts checkboxes next to the
